2004-10-08  Sushma Rai  <rsushma@novell.com>
	
	* camel/camel-exchange-folder.c: Include camel-i18n.h

	* camel/camel-exchange-store.c: ditto

	* camel/camel-exchange-transport.c: ditto

	* camel/camel-stub.c: ditto

2004-10-05  Sushma Rai  <rsushma@novell.com>

	* storage/main.c (setup_addressbook_factory): Registering
	GAL backend.

	* addressbook/e-book-backend-gal-factory.h: Added missed out semicolon.

	* addressbook/Makefile.am: Added missed out slash, compiles gal
	factory files.
 
	* addressbook/e-book-backend-exchange-factory.c
	(e_book_backend_exchange_factory_get_type): Indented properly.
 
	* addressbook/e-book-backend-gal-factory.c : Added Copyright info
	(e_book_backend_gal_factory_get_type): Making the type static.
	
	* calendar/e-cal-backend-exchange-factory.c
	(events_backend_exchange_factory_get_type)
	(todos_backend_exchange_factory_get_type): Likewise

2004-10-05  Sushma Rai  <rsushma@novell.com>

	* storage/main.c (setup_calendar_factory)(setup_addressbook_factory):
	Changed registering the factory.

	* addressbook/Makefile.am: add e-book-backend-exchange-factory.[ch]
	and e-book-backend-gal-factory.[ch]

	* calendar/Makefile.am: add e-cal-backend-exchange-factory.[ch]

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in:
	Changed BookFactory and CalFactory version to 1.2

2004-10-05  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-exchange-factory.[ch]: New files.
	EBookBackendFactory for exchange addressbook backend.

	* addressbook/e-book-backend-gal-factory.[ch]: New files.
	EBookBackendFactory for exchange gal backend.

	* calendar/e-cal-backend-exchange-factory.[ch]: New files.
	ECalBackendFactory for exchange calendar backend.

2004-10-03  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-10-01  Sushma Rai <rsushma@novell.com>

	* storage/main.c (setup_calendar_factory)(setup_addressbook_factory):
	Removed factory_register_methods for registering exchange